<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blind.ly Messenger</string>
    <string name="main_shortcode">e</string>
    <string name="main_help">Tap volume up to compose, tap volume down to read</string>
    <string name="main_tts">Welcome to Blindly Messenger.</string>
    <string name="main_up">COMPOSE</string>
    <string name="main_down">READ</string>
    <string name="recipient_input_shortcode">i</string>
    <string name="recipient_input_help">First type the beginning of the contact name using Morse Code. Tap volume up for dot, hold volume up for dash, and tap volume down for the next character. Tap volume down again for the next word. Tap volume up and down together to start navigating the list. Once you have chosen the correct contact, tap volume Up and Down again at the same time.</string>
    <string name="recipient_input_tts">Input recipient name.</string>
    <string name="recipient_input_hint">Enter recipient</string>
    <string name="message_input_shortcode">s</string>
    <string name="message_input_help">Type the message using Morse Code. Tap volume up for dot, hold volume up for dash, and tap volume down for the next character. Tap volume down again for the next word. Tap volume up and down together to send the message.</string>
    <string name="message_input_tts">Compose message to</string>
    <string name="message_input_sent">Message\nSent</string>
    <string name="message_input_hint">Compose message body</string>
    <string name="popup_help">Tap volume up to listen, tap volume down to reply</string>
    <string name="popup_tts">New message from</string>
    <string name="name_self">Me</string>
    <string name="filter_hint">type a contact or a phone number</string>
    <string name="message_input_send">Send</string>
    <string name="message_list_help">Tap the volume up and volume down buttons to navigate through the list. Tap both Volume Up and volume Down together to read a conversation.</string>
    <string name="message_list_shortcode">t</string>
    <string name="message_list_tts">select the message</string>
    <string name="message_list_shortcode_loading">t</string>
    <string name="message_list_shortcode_done">h</string>
    <string name="message_list_tts_loading">Loading your conversations.</string>
    <string name="message_list_tts_done">Select a conversation.</string>
    <string name="conversation_view_shortcode">m</string>
    <string name="conversation_view_tts">Conversation with </string>
    <string name="conversation_view_help">Tap the volume up and volume down buttons to navigate through the list. Tap both Volume Up and volume Down buttons together to reply to conversation.</string>
    <string name="first_run_message">This message will only play once. Thank you for installing Blindly Messenger. You can use this application by tapping the volume keys and listening to the voice commands. If you are stuck on any screen, hold volume up and volume down together for 2 seconds to get help on that screen. You can access Preferences by tapping the Menu button. We hope you enjoy using Blindly Messenger!</string>
    <string name="default_vibrate_speed">50</string>
    <string name="default_input_speed">150</string>
    <string name="default_messages">200</string>
    <string name="default_output">Text-to-speech</string>
    <string name="default_alert">Pop-up alert</string>

</resources>