<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Main Preferences" >

        <ListPreference android:key="alert" android:title="Incoming SMS alert method" android:entryValues="@array/alerts" android:entries="@array/alerts" android:summary="Choose alert method for incoming SMS messages" android:defaultValue="@string/default_alert" android:dialogTitle="Choose alert method"/>

        <CheckBoxPreference
            android:defaultValue="@bool/default_blank"
            android:disableDependentsState="true"
            android:key="blank"
            android:summaryOff="Screen on for touch navigation"
            android:summaryOn="Blanks the screen to save power"
            android:title="Blank screen" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_touch"
            android:dependency="blank"
            android:key="touch"
            android:summaryOff="Only navigate with Volume keys"
            android:summaryOn="Navigate by touching the screen"
            android:title="Allow touch input" />
        
    </PreferenceCategory>

    <PreferenceCategory android:title="Output Preferences" >

        <ListPreference
            android:defaultValue="@string/default_output"
            android:dialogTitle="Choose output method"
            android:entries="@array/outputs"
            android:entryValues="@array/outputs"
            android:key="output"
            android:summary="Choose the output method for actions and help"
            android:title="Output method" />

        <ListPreference
            android:defaultValue="@string/default_vibrate_speed"
            android:dialogTitle="Choose base speed"
            android:entries="@array/speed_names"
            android:entryValues="@array/speed_values"
            android:key="vibrate_speed"
            android:summary="Choose the base speed for vibrating Morse Code"
            android:title="Vibrate base speed" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Input Preferences" >

        <ListPreference
            android:defaultValue="@string/default_input_speed"
            android:dialogTitle="Choose base speed"
            android:entries="@array/speed_names"
            android:entryValues="@array/speed_values"
            android:key="input_speed"
            android:summary="Choose the base speed for inputing Morse Code"
            android:title="Input base speed" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Other Preferences" >

        <ListPreference
            android:defaultValue="@string/default_messages"
            android:dialogTitle="Text message limit"
            android:entries="@array/number_messages"
            android:entryValues="@array/number_messages"
            android:key="messages"
            android:summary="Choose how many messages to show"
            android:title="Text message limit" />
    </PreferenceCategory>

</PreferenceScreen>